--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ jinja2 = ">=3.1.6,<3.2.0"
 nox = "^2025.2.9"
 requests = "^2.31.0"
 semgrep = "^1.119.0"
+keyring = "^24.0.0"
+"keyrings.google-artifactregistry-auth" = "^1.1.2"
+packaging = "^23.1"
 
 [tool.poetry.group.dev.dependencies]
 # Core testing & linting
