--- a/.github/workflows/security-semgrep.yml
+++ b/.github/workflows/security-semgrep.yml
@@ -1,75 +1,70 @@
-# name = security-semgrep.yml
-# description = Run Semgrep security scans via Nox session using unified .semgrep.yml
-# category = security
-# usage = Trigger on push to src/**, tests/**, .semgrep.yml; on pull_request; and weekly on Sunday at 02:00 UTC
-# behavior = Executes Nox session "semgrep" (which installs Semgrep==1.119.0 and runs .semgrep.yml, producing a SARIF); fails on any findings
-# inputs = triggers: schedule, push, pull_request; secrets: none
-# outputs = semgrep.sarif
-# dependencies = step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf, actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683, actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55, actions/cache@2f8e54208210a422b2efd51efaa6bd6d7ca8920f, pip, nox, github/codeql-action/upload-sarif@45775bd8235c68ba998cffa5171334d58593da47
-# author = Byron Williams
-# last_modified = 2025-04-19
-# tags = security, semgrep, ci
-# changelog = Added pip cache; generate & upload SARIF via Nox session
+---
+# Front-Matter for GitHub Workflow
+
+title: "Security Semgrep Workflow"
+name: "security-semgrep.yml"
+description: "Run Semgrep security scans via Nox session using unified .semgrep.yml"
+category: security
+usage: "Trigger on push to src/**, tests/**, .semgrep.yml; on pull_request; and weekly on Sunday at 02:00 UTC"
+behavior: "Executes Nox session \"semgrep\" (which installs Semgrep==1.119.0 and runs .semgrep.yml, producing a SARIF); fails on any findings"
+inputs: "triggers: schedule, push, pull_request; secrets: none" # pragma: allowlist secret
+outputs: "semgrep.sarif"
+dependencies: "github/codeql-action/upload-sarif@v3"
+author: "Byron Williams"
+last_modified: "2025-04-19"
+changelog: "Added pip cache; generate & upload SARIF via Nox session"
+tags: [security, semgrep, ci]
+---
 
 name: Security – Semgrep via Nox
 
 on:
-    push:
-        paths:
-            - "src/**"
-            - "tests/**"
-            - "semgrep.yml"
-    pull_request:
+  push:
+    paths:
+      - "src/**"
+      - "tests/**"
+      - "semgrep.yml"
+  pull_request:
+  schedule:
+    - cron: "0 2 * * 0"  # Weekly on Sunday at 02:00 UTC
 
 permissions:
-    contents: read
+  contents: read
 
 env:
-    SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-    SEMGREP_DEPLOYMENT_ID: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
+  SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }} # pragma: allowlist secret
+  SEMGREP_DEPLOYMENT_ID: ${{ secrets.SEMGREP_DEPLOYMENT_ID }} # pragma: allowlist secret
 
 jobs:
-    semgrep:
-        runs-on: ubuntu-22.04
-        steps:
-            - name: Harden runner
-              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
+  prepare:
+    name: Prepare Poetry & Assured OSS
+    uses: ./.github/workflows/templates/prepare-poetry.yml
+    with:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+    secrets:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
 
-            - name: Checkout code
-              uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+  semgrep:
+    name: Run Semgrep scans
+    needs: prepare
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Cache pip
-              uses: actions/cache@v3
-              with:
-                  path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('poetry.lock','requirements.txt') }}
-                  restore-keys: ${{ runner.os }}-pip-
+      - name: Verify no public PyPI fallbacks
+        run: poetry run nox -s verify_assured
 
-            - name: Cache Nox venvs
-              uses: actions/cache@v3
-              with:
-                  path: .nox
-                  key: ${{ runner.os }}-nox-${{ hashFiles('noxfile.py') }}
-                  restore-keys: ${{ runner.os }}-nox-
+      - name: Run Semgrep session
+        run: |
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            poetry run nox -s semgrep_ci
+          else
+            poetry run nox -s semgrep_full
+          fi
 
-            - name: Setup Python
-              uses: actions/setup-python@...
-              with:
-                  python-version: "3.11"
-
-            - name: Install Nox
-              run: python -m pip install --upgrade pip && pip install nox
-
-            - name: Run Semgrep (CI or full)
-              run: |
-                if [ "${{ github.event_name }}" = "pull_request" ]; then
-                  nox -s semgrep_ci
-                else
-                  nox -s semgrep_full
-                fi
-
-            - name: Upload SARIF (CI only)
-              if: github.event_name == 'pull_request'
-              uses: github/codeql-action/upload-sarif@...
-              with:
-                  sarif_file: docs/reports/sarif/semgrep-ci.sarif
+      - name: Upload Semgrep SARIF (PR only)
+        if: github.event_name == 'pull_request'
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: docs/reports/sarif/semgrep-ci.sarif
